tests/baselines/reference/recursiveExportAssignmentAndFindAliasedType7(strict=true).errors.txt
recursiveExportAssignmentAndFindAliasedType7_moduleC.ts(2,5): error TS7022: 'selfVar' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.


==== recursiveExportAssignmentAndFindAliasedType7_moduleA.ts (0 errors) ====
    import moduleC = require("recursiveExportAssignmentAndFindAliasedType7_moduleC");
    import ClassB = require("recursiveExportAssignmentAndFindAliasedType7_moduleB");
    export var b: ClassB; // This should result in type ClassB
==== recursiveExportAssignmentAndFindAliasedType7_moduleC.ts (1 errors) ====
    import self = require("recursiveExportAssignmentAndFindAliasedType7_moduleD");
    var selfVar = self;
        ~~~~~~~
!!! error TS7022: 'selfVar' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    export = selfVar;
    
==== recursiveExportAssignmentAndFindAliasedType7_moduleD.ts (0 errors) ====
    import self = require("recursiveExportAssignmentAndFindAliasedType7_moduleE");
    export = self;
    
==== recursiveExportAssignmentAndFindAliasedType7_moduleE.ts (0 errors) ====
    import self = require("recursiveExportAssignmentAndFindAliasedType7_moduleC");
    export = self;
    
==== recursiveExportAssignmentAndFindAliasedType7_moduleB.ts (0 errors) ====
    class ClassB { }
    export = ClassB;
    